--- a/src/features/textbook/Textbook.module.css
+++ b/src/features/textbook/Textbook.module.css
@@ -45,3 +45,55 @@
 .buttonControl {
   margin: 10px !important;
 }
+.hideContainer {
+  display: none !important;
+}
+.background1 {
+  background-image: url(./img/textbook-bg1.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background2 {
+  background-image: url(./img/textbook-bg2.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background3 {
+  background-image: url(./img/textbook-bg3.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background4 {
+  background-image: url(./img/textbook-bg4.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background5 {
+  background-image: url(./img/textbook-bg5.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background6 {
+  background-image: url(./img/textbook-bg6.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.background7 {
+  background-image: url(./img/textbook-bg7.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
