--- a/src/features/sprintPage/timer.css
+++ b/src/features/sprintPage/timer.css
@@ -3,7 +3,6 @@
   top: 8%;
   display: flex;
   flex-direction: row;
-  background: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   width: 10rem;
@@ -23,7 +22,7 @@
   line-height: 15px;
   letter-spacing: 0em;
   text-align: left;
-  color: rgba(0, 0, 0, 0.5);
+  color: #ffd600;
 }
 .timer_minutes-counter,
 .timer_seconds-counter {
