--- a/src/features/sprintPage/SprintPage.module.css
+++ b/src/features/sprintPage/SprintPage.module.css
@@ -20,6 +20,30 @@
   opacity: 1;
   transform: scale(2);
 }
+.star {
+  padding: 1rem;
+  color: grey;
+  opacity: 0.2;
+  transition: 1s ease-in-out;
+}
+.star_active {
+  padding: 1rem;
+  color: #ffd600;
+  opacity: 1;
+  transform: scale(1.5);
+  transition: 1s ease-in-out;
+}
+.sprint__score {
+  font-size: 0.9rem;
+  border: 3px solid #ffc53d;
+  padding: 0.4rem 1rem;
+  border-radius: 2rem;
+  color: #ffc53d;
+  font-family: 'Gilroy-Bold';
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin: 1rem auto;
+}
 
 /* $modal-window-height: 500px;
 
