--- a/src/features/statistics/Statistics.module.css
+++ b/src/features/statistics/Statistics.module.css
@@ -5,3 +5,9 @@
   padding: 15px;
   margin-bottom: 10px;
 }
+.shortContainers {
+  display: flex !important;
+}
+.shortContainer {
+  width: 50% !important;
+}
