--- a/src/features/textbook/Textbook.module.css
+++ b/src/features/textbook/Textbook.module.css
@@ -30,6 +30,19 @@
 .typography {
   margin-top: 20px !important;
 }
+.cardTitle {
+  display: flex !important;
+  align-items: center !important;
+}
+.cardSound {
+  opacity: 0.7 !important;
+  cursor: pointer !important;
+  transition: all 0.5s !important;
+}
+.cardSound:hover {
+  opacity: 1 !important;
+  cursor: pointer !important;
+}
 .picture {
   max-width: 300px;
   max-height: 150px;
