--- a/src/features/team/Team.module.css
+++ b/src/features/team/Team.module.css
@@ -4,6 +4,7 @@
   justify-content: center !important;
   padding: 20px !important;
   flex-wrap: wrap !important;
+  margin: auto !important;
 }
 .cardContainer {
   margin: 10px;
