--- a/src/features/home/Home.module.css
+++ b/src/features/home/Home.module.css
@@ -77,3 +77,125 @@
   opacity: 1;
   transition: 0s;
 }
+
+.book {
+  background-image: url('../../assets/textbook.jpg');
+}
+.audio {
+  background-image: url('../../assets/audiochallenge.jpg');
+}
+.sprint {
+  background-image: url('../../assets/sprint.jpg');
+}
+
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --background-dark: #2d3548;
+  --text-light: rgba(255, 255, 255, 0.6);
+  --text-lighter: rgba(255, 255, 255, 0.9);
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 64px;
+  --width-container: 1200px;
+}
+body {
+  height: 100%;
+}
+main {
+  display: contents;
+  flex-direction: column;
+  min-height: 100%;
+}
+.hero_section {
+  align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+  padding: var(--spacing-xxl) var(--spacing-l);
+}
+.card_grid {
+  display: grid;
+  grid-template-columns: repeat(1, 280px);
+  grid-column-gap: var(--spacing-l);
+  grid-row-gap: var(--spacing-l);
+  max-width: var(--width-container);
+}
+.card {
+  list-style: none;
+  position: relative;
+  max-width: 300px;
+}
+
+.card:before {
+  content: '';
+  display: block;
+  padding-bottom: 150%;
+  width: 100%;
+}
+
+.card__background {
+  background-size: cover;
+  background-position: center;
+  border-radius: var(--spacing-l);
+  bottom: 0;
+  filter: brightness(0.75) saturate(1.2) contrast(0.85);
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: center;
+  transform: scale(1) translateZ(0);
+  transition: filter 200ms linear, transform 200ms linear;
+}
+
+.card:hover .card__background {
+  transform: scale(1.05) translateZ(0);
+}
+
+.card_grid:hover > .card:not(:hover) .card__background {
+  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
+}
+
+.card__content {
+  left: 0;
+  padding: var(--spacing-l);
+  position: absolute;
+  top: 0;
+}
+.card__category {
+  color: var(--text-light);
+  font-size: 0.9rem;
+  margin-bottom: var(--spacing-s);
+  text-transform: uppercase;
+}
+
+.card__heading {
+  color: var(--text-lighter);
+  font-size: 1.9rem;
+  text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+  line-height: 1.4;
+  word-spacing: 100vw;
+}
+@media (min-width: 320px) {
+  .card_grid {
+    grid-template-columns: repeat(1, 280px);
+  }
+}
+
+@media (min-width: 720px) {
+  .card_grid {
+    grid-template-columns: repeat(2, 280px);
+  }
+}
+@media (min-width: 1250px) {
+  .card_grid {
+    grid-template-columns: repeat(4, 280px);
+  }
+}
