--- a/src/features/home/Home.module.css
+++ b/src/features/home/Home.module.css
@@ -87,13 +87,13 @@
 .sprint {
   background-image: url('../../assets/sprint.jpg');
 }
-
+/* 
 * {
   border: 0;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 :root {
   --background-dark: #2d3548;
   --text-light: rgba(255, 255, 255, 0.6);
